--- a/TaxiCab.Core/TaxiCab.Core.csproj
+++ b/TaxiCab.Core/TaxiCab.Core.csproj
@@ -120,17 +120,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\ISettingService.cs" />
-    <Compile Include="Models\author.cs" />
-    <Compile Include="Models\blogEntry.cs" />
-    <Compile Include="Models\blogTag.cs" />
-    <Compile Include="Models\blogCategory.cs" />
-    <Compile Include="Models\Partials\blogEntry.cs" />
+    <Compile Include="Models\cabRide.cs" />
     <Compile Include="Models\user.cs" />
-    <Compile Include="Models\Partials\engineer.cs" />
+    <Compile Include="Models\Partials\cabRide.cs" />
     <Compile Include="Models\setting.cs" />
     <Compile Include="Models\userActionLog.cs" />
     <Compile Include="Interfaces\ILogService.cs" />
     <Compile Include="Objects\EventType.cs" />
+    <Compile Include="Services\IMeteredStrategyOneFifthLessThanSixRule.cs" />
     <Compile Include="Services\MeteredRateStrategyService.cs" />
     <Compile Include="Services\MeteredStrategyNewYorkRule.cs" />
     <Compile Include="Services\MeteredStrategyNightRule.cs" />
@@ -143,7 +140,6 @@
     <Compile Include="Interfaces\ITrackerEnabledService.cs" />
     <Compile Include="Objects\RequirementCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\AuthorizeService.cs" />
     <Compile Include="Interfaces\IAuthorizeService.cs" />
     <Compile Include="Services\TrackerEnabledService.cs" />
     <Compile Include="ViewModels\BaseHistoryVM.cs" />
