- All rules implemented.

--- a/TaxiCab.Core/TaxiCab.Core.csproj
+++ b/TaxiCab.Core/TaxiCab.Core.csproj
@@ -127,7 +127,7 @@
     <Compile Include="Models\userActionLog.cs" />
     <Compile Include="Interfaces\ILogService.cs" />
     <Compile Include="Objects\EventType.cs" />
-    <Compile Include="Services\IMeteredStrategyOneFifthLessThanSixRule.cs" />
+    <Compile Include="Interfaces\IMeteredStrategyRule.cs" />
     <Compile Include="Services\MeteredRateStrategyService.cs" />
     <Compile Include="Services\MeteredStrategyNewYorkRule.cs" />
     <Compile Include="Services\MeteredStrategyNightRule.cs" />
