--- a/TaxiCab.IntegrationTests/TaxiCab.IntegrationTests.csproj
+++ b/TaxiCab.IntegrationTests/TaxiCab.IntegrationTests.csproj
@@ -35,6 +35,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="StructureMap, Version=4.0.1.318, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.4.0.1.318\lib\net40\StructureMap.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="StructureMap.Net4, Version=4.0.1.318, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\structuremap.4.0.1.318\lib\net40\StructureMap.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,8 +58,22 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Services\MeteredRateStrategyService_ApplyRulesShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TaxiCab.Core\TaxiCab.Core.csproj">
+      <Project>{582A421E-4D29-4647-8BE5-0ECCCA2083F8}</Project>
+      <Name>TaxiCab.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TaxiCab\TaxiCab.csproj">
+      <Project>{E1F783AC-0E6E-4077-9848-5F3849766BC4}</Project>
+      <Name>TaxiCab</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
