--- a/TaxiCab.Infrastructure/TaxiCab.Infrastructure.csproj
+++ b/TaxiCab.Infrastructure/TaxiCab.Infrastructure.csproj
@@ -94,6 +94,11 @@
     <Compile Include="Data\EfDataDbContext.cs" />
     <Compile Include="Data\TrackingConfig.cs" />
     <Compile Include="Getters\EnvironmentConfigSettingsGetter.cs" />
+    <Compile Include="Migrations\201710140106431_InitialMigration.cs" />
+    <Compile Include="Migrations\201710140106431_InitialMigration.Designer.cs">
+      <DependentUpon>201710140106431_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -127,6 +132,11 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201710140106431_InitialMigration.resx">
+      <DependentUpon>201710140106431_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
